@@ -49,7 +49,7 @@ jobs:
         run: rm -rf /opt/hostedtoolcache
       - name: Start CockroachDB
         run: docker run -d -p 26257:26257 cockroachdb/cockroach:latest start-single-node --insecure
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Setup Perl
         id: perl
         uses: shogo82148/actions-setup-perl@v1
