@@ -20,7 +20,7 @@ jobs:
         ports: [ 8563 ]
         options: --privileged
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Setup Clients
         run: .github/ubuntu/exasol.sh
       - name: Setup Perl
