@@ -29,7 +29,7 @@ jobs:
           ISC_PASSWORD: nix
           FIREBIRD_DATABASE: sqitchtest.db
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Setup Clients
         run: .github/ubuntu/firebird.sh
       - name: Setup Perl
