@@ -11,7 +11,7 @@ jobs:
     name: ❄️ Snowflake
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Setup Clients
         run: .github/ubuntu/snowflake.sh
       - name: Setup Perl
