@@ -16,7 +16,7 @@ jobs:
     name: 💡 SQLite ${{ matrix.sqlite }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Setup Perl
         id: perl
         uses: shogo82148/actions-setup-perl@v1
