@@ -2,7 +2,7 @@ name = App-Sqitch
 license = MIT
 copyright_holder = "iovation Inc., David E. Wheeler"
 copyright_year = 2012-2023
-version = v1.4.1-dev
+version = v1.4.1
 
 [GatherDir]
 exclude_filename = dist/cpanfile
