@@ -1,4 +1,4 @@
-# This file is generated by Dist::Zilla::Plugin::CPANFile v6.030
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.031
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "Algorithm::Backoff::Exponential" => "0.006";
@@ -54,6 +54,7 @@ requires "URI::QueryParam" => "0";
 requires "URI::db" => "0.20";
 requires "User::pwent" => "0";
 requires "constant" => "0";
+requires "locale" => "0";
 requires "namespace::autoclean" => "0.16";
 requires "overload" => "0";
 requires "parent" => "0";
