@@ -1,14 +1,6 @@
 #!/usr/bin/env perl -CAS
 
-use POSIX qw(setlocale);
-BEGIN {
-    if ($^O eq 'MSWin32') {
-        require Win32::Locale;
-        setlocale POSIX::LC_ALL, Win32::Locale::get_locale();
-    } else {
-        setlocale POSIX::LC_ALL, '';
-    }
-}
+use locale;
 use FindBin;
 use lib "$FindBin::Bin/../lib";
 use App::Sqitch;
